Fixed issue with the footer on small screens.
Bootstrap puts a padding of 20px on the left and right side of the body when the screen is at most 767px wide. This caused weird whitespace next to the footer. Fixed by putting the padding on the #wrap and #footer element instead of on the body.

--- a/css/custom.css
+++ b/css/custom.css
@@ -48,3 +48,16 @@ body {
 	width: 80%;
 	margin: 0 auto;
 }
+
+/* undo weird padding from Bootstrap */
+@media (max-width: 767px) {
+	body {
+		padding-left: 0;
+		padding-right: 0;
+	}
+	
+	#wrap, #footer {
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+}
